--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -35,18 +35,26 @@ body {
     justify-content: center;
     padding: 0 10%;
     box-sizing: border-box;
+    max-width: 100%;
 }
 
 .certificate-slider {
     display: flex;
     max-width: 100%;
     justify-content: center;
+    margin-right: 20px;
+    margin-left: 20px;
+}
+
+.certificate-card:last-child {
+    margin-right: 0; 
 }
 
 .certificate-card {
-    width: 320px;
-    height: 320px;
-    margin: 20px;
+    width: 30%; 
+    max-width: 320px;
+    height: auto;
+    max-height: 320px;
     flex: 0 0 auto;
     margin-right: 20px;
     border: 2px solid #000;
@@ -186,7 +194,7 @@ body {
 }
 
 #button-image {
-    width: 140px;
+    width: 20%;
     height: auto;
     cursor: pointer;
     transition: transform 0.3s ease-in-out;
@@ -197,12 +205,21 @@ body {
 }
 
 .home-img {
-    width: 1000px;
+    max-width: 80%; 
     height: auto;
     display: block;
     margin-left: auto;
     margin-right: auto;
 }
+
+.home-container {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+
 
 /* For mobile devices */
 @media screen and (max-width: 768px) {
@@ -303,8 +320,6 @@ body {
         text-align: center;
     }
 
-
-
     .certificate-slider-container {
         overflow-x: auto;
         white-space: nowrap;
@@ -317,6 +332,7 @@ body {
     .certificate-slider {
         display: flex;
         flex-wrap: nowrap;
+        margin-left: -15px;
     }
 
     .certificate-card {
@@ -325,11 +341,7 @@ body {
         max-width: calc(100%);
         margin-right: 15px;
     }
-
-    .certificate-card:first-child {
-        margin-left: 80%;
-    }
-
+    
     .certificate-img-container {
         width: 100%;
     }
