--- a/assets/css/contact.css
+++ b/assets/css/contact.css
@@ -1,76 +1,161 @@
 @import url("https://fonts.googleapis.com/css2?family=Lexend:wght@800&family=Titan+One&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Lexend:wght@800&display=swap");
 
+.contact-page {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #fb99bf;
+  position: relative;
+}
+
+.contact-card {
+  background-color: #f9f0df;
+  padding: 40px;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+  width: 200px;
+  height: 220px;
+  z-index: 2;
+  border: 2px solid black;
+  margin-right: -100px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+
+.contact-card img {
+  max-width: 100%;
+  height: auto;
+  display: block;
+  margin: 0 auto;
+  border-radius: 10px;
+}
+
+.contact-card h2 {
+  margin-bottom: 20px;
+  font-size: 20px;
+  font-family: "Lexend", sans-serif;
+}
+
+.contact-card p {
+  margin: 10px 0;
+  font-size: 16px;
+  font-family: "Lexend", sans-serif;
+}
+
+.contact-card i {
+  margin-right: 10px;
+  font-family: "Lexend", sans-serif;
+}
+
+.contact-form-container {
+  margin-top: 20px;
+  background-color: #f9f0df;
+  padding: 20px 60px 20px 60px;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  width: 380px;
+  height: 350px;
+  z-index: 1;
+  text-align: center;
+  margin-bottom: 10px;
+  border: 2px solid black;
+  margin-left: 50px;
+}
+
+.contact-form-container h2 {
+  font-size: 20px;
+  font-family: "Lexend", sans-serif;
+  color: #333;
+}
+
+.contact-form-container p {
+  margin-bottom: 10px;
+  font-family: "Lexend", sans-serif;
+  font-size: 14px;
+  color: #666;
+}
+
 .contact-form {
-    position: relative;
-    min-height: 50vh;
-    z-index: 0;
-    padding: 10px;
-    justify-content: center;
-    display: grid;
-    grid-template-columns: 1fr;
-    align-content: space-evenly;
-}
-
-.contact-main {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    background-color: #f9f0df;
-    border-radius: 15px;
-    margin: 40px;
-    overflow: hidden;
-    border: 2px solid black;
-}
-
-.contact-content {
-    flex-basis: 50%;
-    padding: 3em;
-    box-shadow: 2px 9px -17px rgba(0, 0, 0, 0.05);
-    border-radius: 8px;
-}
-
-.contact-img {
-    flex-basis: 50%;
-    padding: 40px;
-    border-radius: 8px;
-    align-items: center;
-    justify-content: center;
-    display: grid;
-}
-
-.contact-img img {
-    max-width: 80%;
+  display: flex;
+  flex-direction: column;
 }
 
 .contact-form input,
 .contact-form textarea {
-    outline: 2px solid #000;
-    margin-top: 5px;
-    font-size: 16px;
-    color: #666;
-    padding: 10px;
-    width: 100%;
-    box-sizing: border-box;
-    border: none;
-    background: #fb99bf;
-    border-radius: 15px;
-    transition: 0.3s ease;
+  outline: none;
+  margin: 4px 0;
+  font-size: 14px;
+  color: #666;
+  padding: 10px;
+  width: 100%;
+  font-family: "Lexend", sans-serif;
+  box-sizing: border-box;
+  border: 2px solid #ccc;
+  border-radius: 15px;
+  transition: border-color 0.3s;
 }
 
 .contact-form input:focus,
 .contact-form textarea:focus {
-    background: transparent;
-    border: 1px solid #fb99bf;
+  border-color: #fb99bf;
 }
 
 .btn-contact {
-    font-size: 18px;
-    color: #f9f0df;
-    width: 100%;
-    background: #fb99bf;
-    font-weight: 600;
-    transition: 0.3s ease;
-    padding: 14px 15px;
-    border-radius: 35px;
-    cursor: pointer;
+  border: 2px solid black;
+  border-radius: 25px;
+  transition: all 0.3s ease;
+  box-shadow: 3px 3px 0 black;
+  margin-top: 10px;
+  background-color: #e85c3b;
+  height: 40px;
+  font-family: "Lexend", sans-serif;
+  font-size: 16px;
+}
+
+.btn-contact:hover {
+  transform: translateY(3px);
+  box-shadow: 0 0 0 black;
+}
+
+#footer-container {
+  width: 100%;
+  position: absolute;
+  bottom: 0;
+}
+
+/* Media Queries for Responsiveness */
+@media (max-width: 768px) {
+  .contact-card {
+    display: none;
+  }
+
+  .contact-form-container {
+    width: 80%;
+    padding: 20px;
+    margin-left: 0;
+    margin-top: 20px;
+  }
+
+  .contact-form-container h2 {
+    font-size: 16px;
+  }
+
+  .contact-form-container p {
+    font-size: 10px;
+  }
+
+  .contact-form input,
+  .contact-form textarea {
+    font-size: 10px;
+    padding: 8px;
+  }
+
+  .btn-contact {
+    font-size: 14px;
+    padding: 10px;
+  }
 }
