--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -1,398 +1,428 @@
 @import url("https://fonts.googleapis.com/css2?family=Lexend:wght@800&family=Titan+One&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Lexend:wght@800&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Lexend:wght@800&family=Titan+One&display=swap");
 
 /* Common style */
-
 * {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
 
 html,
 body {
-    margin: 0;
-    padding: 0;
-    height: 100%;
-    background-color: #fb99bf;
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  background-color: #fb99bf;
 }
 
 /* Home */
-
 .section-title {
-    font-family: "Lexend", sans-serif;
-    font-size: 29px;
-    position: relative;
-    margin-bottom: 30px;
-    font-weight: 500;
-    text-align: center;
+  font-family: "Lexend", sans-serif;
+  font-size: 29px;
+  position: relative;
+  margin-top: 30px;
+  font-weight: 500;
+  text-align: center;
 }
 
-.certificate-slider-container {
+.certificate-slider-container,
+.achievement-slider-container {
+  overflow-x: auto;
+  white-space: nowrap;
+  display: flex;
+  margin: 10px;
+  justify-content: center;
+  box-sizing: border-box;
+  max-width: 100%;
+  padding: 20px;
+}
+
+.certificate-slider,
+.achievement-slider {
+  display: flex;
+  max-width: 100%;
+}
+
+.certificate-card,
+.achievement-card {
+  width: 300px;
+  max-width: auto;
+  height: auto;
+  max-height: 320px;
+  flex: 0 0 auto;
+  margin-right: 20px;
+  border: 2px solid #000;
+  border-radius: 10px;
+  overflow: hidden;
+  background-color: #f9f0df;
+  transition: transform 0.3s ease-in-out;
+  display: flex;
+  flex-direction: column;
+}
+
+.certificate-card:hover,
+.achievement-card:hover {
+  transform: scale(1.05);
+}
+
+.certificate-img,
+.achievement-img {
+  width: 100%;
+  height: auto;
+  margin: 10px;
+  border: 2px solid #000;
+  max-height: 200px;
+  border-radius: 10px;
+  max-width: 270px;
+  align-self: center;
+}
+
+.certificate-img-container,
+.achievement-img-container {
+  overflow: hidden;
+  display: flex;
+  justify-content: center;
+}
+
+.certificate-details,
+.achievement-details {
+  align-items: center;
+  text-align: center;
+  padding: 15px;
+}
+
+.certificate-title,
+.achievement-title {
+  font-family: "Lexend", sans-serif;
+  font-size: 18px;
+  font-weight: 500;
+  margin-bottom: 10px;
+  display: -webkit-box;
+  -webkit-line-clamp: 2; /* Limit to 2 lines */
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.certificate-description,
+.achievement-description {
+  font-family: "Lexend", sans-serif;
+  font-size: 14px;
+  color: #666;
+  margin-bottom: 10px;
+  display: -webkit-box;
+  -webkit-line-clamp: 2; /* Limit to 2 lines */
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+/* Modal Styles */
+.overlay {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 2;
+}
+
+.modal-container {
+  width: 85%;
+  max-width: 700px;
+  height: 80vh;
+  display: none;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 3;
+  border: 2px solid black;
+  border-radius: 15px;
+  overflow: hidden;
+}
+
+.modal-content {
+  height: 100%;
+  overflow-y: auto;
+  margin: auto;
+  padding: 20px;
+  box-sizing: border-box;
+  background-color: #fff;
+  position: relative;
+  background-color: #f9f0df;
+  text-align: center;
+  border-radius: 15px;
+}
+
+.close-modal {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  color: #000;
+  cursor: pointer;
+  font-size: 24px;
+}
+
+.modal-details {
+  text-align: center;
+}
+
+.modal-title {
+  font-family: "Lexend", sans-serif;
+  font-size: 24px;
+  margin: 0;
+  margin-bottom: 10px;
+}
+
+.modal-img {
+  width: 100%;
+  height: auto;
+  border-radius: 10px;
+  margin-bottom: 15px;
+  border: 2px solid black;
+}
+
+.modal-description {
+  font-family: "Lexend", sans-serif;
+  font-size: 16px;
+  color: #666;
+}
+
+#button-link {
+  position: absolute;
+  top: 80%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 2;
+}
+
+#button-image {
+  width: 20%;
+  height: auto;
+  cursor: pointer;
+  transition: transform 0.3s ease-in-out;
+}
+
+#button-link:hover #button-image {
+  transform: scale(1.1);
+}
+
+.home-img {
+  max-width: 80%;
+  height: auto;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.home-container {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+
+/* For mobile devices */
+@media screen and (max-width: 768px) {
+  /* section-1 responsive */
+  .section-1 {
+    display: flex;
+    margin-top: 80px;
+    margin-bottom: 20px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 0 20px;
+  }
+
+  .home-container {
+    margin-top: 90px;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+  }
+
+  .home-img {
+    width: 100%;
+    height: auto;
+    display: block;
+    margin: 0;
+    padding: 0;
+  }
+
+  .button-explore {
+    display: none;
+  }
+
+  /* Navbar */
+  .navbar {
+    position: fixed;
+    width: 100%;
+    background-color: #f8f9fa;
+    z-index: 1000;
+  }
+
+  .menu-toggle {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 30px;
+    margin-right: 20px;
+    height: 17px;
+    cursor: pointer;
+    transition: transform 0.4s ease-in-out;
+  }
+
+  .menu-toggle span {
+    width: 100%;
+    height: 3px;
+    background-color: #000;
+    transition: transform 0.4s ease-in-out, opacity 0.2s ease-in-out;
+  }
+
+  .menu-toggle.active span:nth-child(1) {
+    transform: rotate(45deg) translate(5px, 5px);
+  }
+
+  .menu-toggle.active span:nth-child(2) {
+    opacity: 0;
+  }
+
+  .menu-toggle.active span:nth-child(3) {
+    transform: rotate(-45deg) translate(5px, -5px);
+  }
+
+  #menu-links {
+    display: flex;
+    flex-direction: column;
+    padding: 10px;
+    text-align: center;
+    background-color: #f9f0df;
+    position: absolute;
+    top: 70px;
+    left: 0;
+    right: 0;
+    border-radius: 5px;
+    transition: opacity 0.4s ease-in-out, transform 0.4s ease-in-out;
+    opacity: 0;
+    transform: translateY(-20px);
+  }
+
+  #menu-links.active {
+    opacity: 1;
+    transform: translateY(0);
+  }
+
+  .nav-links.active {
+    display: flex;
+  }
+
+  .nav-links li {
+    margin-top: 10px;
+    margin-bottom: 30px;
+  }
+
+  .logo-container {
+    text-align: center;
+  }
+
+  .certificate-slider-container,
+  .achievement-slider-container {
     overflow-x: auto;
     white-space: nowrap;
     display: flex;
-    justify-content: center;
-    padding: 0 10%;
-    box-sizing: border-box;
-    max-width: 100%;
-}
+    flex-wrap: nowrap;
+    padding: 10px;
+  }
 
-.certificate-slider {
+  .certificate-slider,
+  .achievement-slider {
     display: flex;
-    max-width: 100%;
-    justify-content: center;
-    margin-right: 20px;
-    margin-left: 20px;
-}
+    flex-wrap: nowrap;
+  }
 
-.certificate-card:last-child {
-    margin-right: 0; 
-}
-
-.certificate-card {
-    width: 30%; 
-    max-width: 320px;
-    height: auto;
-    max-height: 320px;
+  .certificate-card,
+  .achievement-card {
     flex: 0 0 auto;
-    margin-right: 20px;
-    border: 2px solid #000;
-    border-radius: 10px;
-    overflow: hidden;
-    background-color: #f9f0df;
-    transition: transform 0.3s ease-in-out;
-    display: flex;
-    flex-direction: column;
-}
+    width: 80%;
+    max-width: calc(100%);
+    margin-right: 15px;
+  }
 
-.certificate-card:hover {
-    transform: scale(1.05);
-}
-
-.certificate-img {
-    width: 100%;
+  .certificate-img,
+  .achievement-img {
+    width: 90%;
     height: auto;
     margin: 10px;
     border: 2px solid #000;
     max-height: 200px;
     border-radius: 10px;
+    max-width: 270px;
     align-self: center;
-}
+  }
 
-.certificate-img-container {
-    overflow: hidden;
-    display: flex;
-    justify-content: center;
-}
+  .certificate-img-container,
+  .achievement-img-container {
+    width: 100%;
+  }
 
-.certificate-details {
-    align-items: center;
-    text-align: center;
-    padding: 15px;
-}
+  .certificate-details,
+  .achievement-details {
+    padding: 10px;
+  }
 
-.certificate-title {
-    font-family: "Lexend", sans-serif;
-    font-size: 18px;
-    font-weight: 500;
-    margin-bottom: 10px;
-}
+  .certificate-title,
+  .achievement-title {
+    font-size: 15px;
+    margin-bottom: 8px;
+    white-space: normal;
+    overflow-wrap: break-word;
+    max-width: 100%;
+  }
 
-.certificate-description {
-    font-family: "Lexend", sans-serif;
+  .certificate-description,
+  .achievements-description {
     font-size: 14px;
-    color: #666;
-    margin-bottom: 10px;
+    max-width: 100%;
     overflow: hidden;
     text-overflow: ellipsis;
-    display: -webkit-box;
-    -webkit-line-clamp: 3;
-    -webkit-box-orient: vertical;
-}
+    white-space: nowrap;
+  }
 
-/* Modal Styles */
-.overlay {
-    display: none;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
-    z-index: 2;
-}
+  .modal-container {
+    max-width: 90%;
+    margin: 20px auto;
+    margin-top: 40px;
+  }
 
-.modal-container {
-    width: 85%;
-    max-width: 700px;
-    height: 80vh;
-    display: none;
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    z-index: 3;
-    border: 2px solid black;
-    border-radius: 15px;
-    overflow: hidden;
-}
+  .modal-details {
+    padding: 10px;
+  }
 
-.modal-content {
-    height: 100%;
-    overflow-y: auto;
-    margin: auto;
-    padding: 20px;
-    box-sizing: border-box;
-    background-color: #fff;
-    position: relative;
-    background-color: #f9f0df;
-    text-align: center;
-    border-radius: 15px;
-}
+  .modal-title {
+    font-size: 18px;
+    margin-bottom: 8px;
+  }
 
-.close-modal {
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    color: #000;
-    cursor: pointer;
-    font-size: 24px;
-}
-
-.modal-details {
-    text-align: center;
-}
-
-.modal-title {
-    font-family: "Lexend", sans-serif;
-    font-size: 24px;
-    margin: 0;
-    margin-bottom: 10px;
-}
-
-.modal-img {
-    width: 100%;
+  .modal-img {
+    max-width: 100%;
     height: auto;
     border-radius: 10px;
-    margin-bottom: 15px;
-    border: 2px solid black;
-}
+    margin-bottom: 10px;
+  }
 
-.modal-description {
-    font-family: "Lexend", sans-serif;
-    font-size: 16px;
-    color: #666;
-}
+  .modal-description {
+    font-size: 14px;
+  }
 
-#button-link {
-    position: absolute;
-    top: 80%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    z-index: 2;
-}
-
-#button-image {
-    width: 20%;
-    height: auto;
-    cursor: pointer;
-    transition: transform 0.3s ease-in-out;
-}
-
-#button-link:hover #button-image {
-    transform: scale(1.1);
-}
-
-.home-img {
-    max-width: 80%; 
-    height: auto;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-}
-
-.home-container {
-    position: relative;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-}
-
-
-/* For mobile devices */
-@media screen and (max-width: 768px) {
-    /* section-1 responsive */
-
-    .section-1 {
-        display: flex;
-        margin-top: 80px;
-        margin-bottom: 20px;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        padding: 0 20px;
-    }
-
-    .home-img {
-        width: 100%;
-        height: auto;
-        display: block;
-        margin: 0;
-        padding: 0;
-    }
-
-    .button-explore {
-        display: none;
-    }
-
-    /* Navbar */
-    .navbar {
-        position: fixed;
-        width: 100%;
-        background-color: #f8f9fa;
-        z-index: 1000;
-    }
-
-    .menu-toggle {
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-        width: 30px;
-        margin-right: 20px;
-        height: 17px;
-        cursor: pointer;
-        transition: transform 0.4s ease-in-out;
-    }
-
-    .menu-toggle span {
-        width: 100%;
-        height: 3px;
-        background-color: #000;
-        transition: transform 0.4s ease-in-out, opacity 0.2s ease-in-out;
-    }
-
-    .menu-toggle.active span:nth-child(1) {
-        transform: rotate(45deg) translate(5px, 5px);
-    }
-
-    .menu-toggle.active span:nth-child(2) {
-        opacity: 0;
-    }
-
-    .menu-toggle.active span:nth-child(3) {
-        transform: rotate(-45deg) translate(5px, -5px);
-    }
-
-
-    #menu-links {
-        display: flex;
-        flex-direction: column;
-        padding: 10px;
-        text-align: center;
-        background-color: #f9f0df;
-        position: absolute;
-        top: 70px;
-        left: 0;
-        right: 0;
-        border-radius: 5px;
-        transition: opacity 0.4s ease-in-out, transform 0.4s ease-in-out;
-        opacity: 0;
-        transform: translateY(-20px);
-    }
-
-    #menu-links.active {
-        opacity: 1;
-        transform: translateY(0);
-    }
-
-    .nav-links.active {
-        display: flex;
-    }
-
-    .nav-links li {
-        margin-top: 10px;
-        margin-bottom: 30px;
-    }
-
-    .logo-container {
-        text-align: center;
-    }
-
-    .certificate-slider-container {
-        overflow-x: auto;
-        white-space: nowrap;
-        display: flex;
-        flex-wrap: nowrap;
-        margin-bottom: 20px;
-        padding: 10px 0;
-    }
-
-    .certificate-slider {
-        display: flex;
-        flex-wrap: nowrap;
-        margin-left: -15px;
-    }
-
-    .certificate-card {
-        flex: 0 0 auto;
-        width: 80%;
-        max-width: calc(100%);
-        margin-right: 15px;
-    }
-    
-    .certificate-img-container {
-        width: 100%;
-    }
-
-    .certificate-details {
-        padding: 10px;
-    }
-
-    .certificate-title {
-        font-size: 15px;
-        margin-bottom: 8px;
-        white-space: normal;
-        overflow-wrap: break-word;
-        max-width: 100%;
-    }
-
-    .certificate-description {
-        font-size: 14px;
-        max-width: 100%;
-        overflow: hidden;
-        text-overflow: ellipsis;
-        white-space: nowrap;
-    }
-
-    .modal-container {
-        max-width: 90%;
-        margin: 20px auto;
-        margin-top: 40px;
-    }
-
-    .modal-details {
-        padding: 10px;
-    }
-
-    .modal-title {
-        font-size: 18px;
-        margin-bottom: 8px;
-    }
-
-    .modal-img {
-        max-width: 100%;
-        height: auto;
-        border-radius: 10px;
-        margin-bottom: 10px;
-    }
-
-    .modal-description {
-        font-size: 14px;
-    }
-
-    .close-modal {
-        font-size: 20px;
-    }
+  .close-modal {
+    font-size: 20px;
+  }
 }
