--- a/assets/css/contact.css
+++ b/assets/css/contact.css
@@ -133,6 +133,10 @@
   }
 
   .contact-page {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 20px;
     margin-top: 50px;
   }
 
@@ -141,25 +145,39 @@
     padding: 20px;
     margin-left: 0;
     margin-top: 20px;
-    height: 310px;
+    height: 360px;
+    border: 1px solid black;
   }
 
   .contact-form-container h2 {
+    text-align: center;
+    margin-bottom: 20px;
     font-size: 16px;
   }
 
   .contact-form-container p {
+    text-align: center;
+    margin-bottom: 20px;
     font-size: 10px;
+  }
+
+  .contact-form {
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
   }
 
   .contact-form input,
   .contact-form textarea {
+    width: 100%;
+    padding: 10px;
     font-size: 10px;
-    padding: 8px;
+    border: 1px solid #ddd;
   }
 
   .btn-contact {
     font-size: 14px;
     padding: 10px;
+    border: 1px solid black;
   }
 }
