--- a/assets/css/navbar.css
+++ b/assets/css/navbar.css
@@ -91,6 +91,7 @@ nav {
     align-items: center;
     justify-content: space-between;
     height: 55px;
+    border-top: 1px solid black;
   }
 
   .logo-container {
@@ -119,6 +120,10 @@ nav {
     display: none;
     z-index: 100;
     transition: transform 0.5s ease-in-out;
+  }
+
+  .nav-links .button-text {
+    border: 1px solid black;
   }
 
   .nav-links.active,
