--- a/assets/css/navbar.css
+++ b/assets/css/navbar.css
@@ -10,6 +10,12 @@ nav {
   border-top: 2px solid black;
 }
 
+.navbar {
+  color: transparent;
+  background-color: transparent;
+  z-index: 2;
+}
+
 .checkbox {
   position: absolute;
   display: none;
@@ -24,6 +30,7 @@ nav {
   width: 70px;
   height: auto;
   margin-right: 20px;
+  z-index: 4;
   margin-left: 20px;
 }
 
@@ -37,6 +44,24 @@ nav {
 }
 
 .navbar-img {
+  width: 100%;
+  height: auto;
+  display: flex;
+  margin: 0;
+  display: none;
+  padding: 0;
+}
+
+.navbar-img-navlink {
+  width: 100%;
+  height: auto;
+  display: flex;
+  margin: 0;
+  display: none;
+  padding: 0;
+}
+
+.navbar-img-default {
   width: 100%;
   height: auto;
   display: flex;
@@ -118,7 +143,6 @@ nav {
     align-items: center;
     justify-content: center;
     display: none;
-    z-index: 100;
     transition: transform 0.5s ease-in-out;
   }
 
@@ -177,6 +201,12 @@ nav {
     transition: transform 0.4s ease-in-out;
   }
 
+  #menu-links.active {
+    padding-top: 24px;
+    opacity: 1;
+    transform: translateY(0);
+  }
+
   .checkbox {
     position: absolute;
     display: block;
@@ -203,5 +233,17 @@ nav {
 
   .checkbox:checked ~ .hamburger-lines .line3 {
     transform: rotate(-45deg);
+  }
+
+  .navbar-img-navlink {
+    display: block;
+    position: absolute;
+    bottom: -10px;
+  }
+
+  .navbar-img {
+    display: block;
+    position: absolute;
+    bottom: 0px;
   }
 }
