--- a/assets/css/portfolio.css
+++ b/assets/css/portfolio.css
@@ -149,6 +149,21 @@
   color: #666;
 }
 
+.modal-link,
+.portfolio-modal-link {
+  font-family: "Lexend", sans-serif;
+  font-size: 14px;
+  text-decoration: none;
+  display: block;
+  margin: 10px;
+  transition: color 0.3s ease;
+}
+
+.modal-link:hover,
+.portfolio-modal-link:hover {
+  text-decoration: underline;
+}
+
 @media screen and (max-width: 768px) {
   .portfolio-container {
     margin-top: 90px;
