--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -227,6 +227,8 @@ body {
   text-decoration: none;
   display: block;
   margin: 10px;
+  z-index: 3;
+  pointer-events: auto;
   transition: color 0.3s ease;
 }
 
@@ -275,6 +277,7 @@ body {
   text-decoration: none;
   display: block;
   margin: 10px;
+  pointer-events: auto;
   transition: color 0.3s ease;
 }
 
@@ -471,7 +474,7 @@ body {
     left: 50%;
     transform: translate(-50%, -50%);
     z-index: 3;
-    border: 2px solid black;
+    border: 1px solid black;
     border-radius: 15px;
     overflow: hidden;
   }
